@@ -2,12 +2,13 @@
 Version: 0.0.13
 Date: ????
   Changes:
+    - added data-stage glowing leaves compatibility for trees grown from seeds
     - removed legacy overlay generation scripts
 ---------------------------------------------------------------------------------------------------
 Version: 0.0.12
 Date: 2025-11-06
   Changes:
-    - added compatibility for trees grown from seeds
+    - added runtime glow compatibility for trees grown from seeds
 ---------------------------------------------------------------------------------------------------
 Version: 0.0.11
 Date: 2025-11-06
